##
## This is part of Japanese translation version for Docker's Documantation.
##

bases = \
	global.css     \
	typography.css

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk

copyfiles = \
	code.css         \
	hack.css         \
	icons.css        \
	kapa.css         \
	styles.css       \
	syntax-dark.css  \
	syntax-light.css \
	toc.css

include $(top_srcdir)/build-aux/copy.mk
