##
## This is part of Japanese translation version for Docker's Documantation.
##

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk

bases = \
	utilities.css

copyfiles = \
	components.css   \
	global.css       \
	hack.css         \
	style.css        \
	syntax-dark.css  \
	syntax-light.css \
	theme.css

include $(top_srcdir)/build-aux/copy.mk
