##
## This is part of Japanese translation version for Docker's Documantation.
##

copyfiles = \
	AppleMac.svg         \
	Compose.svg          \
	Linux.svg            \
	Scout.svg            \
	Testcontainers.svg   \
	Whale.svg            \
	Windows.svg          \
	cagent.svg           \
	claude.svg           \
	dhi.svg              \
	facebook.svg         \
	go.svg               \
	headset.svg          \
	instagram.svg        \
	java.svg             \
	linkedin.svg         \
	logo-build-cloud.svg \
	models.svg           \
	moon.svg             \
	openai.svg           \
	search.svg           \
	sparkle.svg          \
	sun.svg              \
	toolkit.svg          \
	twitter.svg          \
	youtube.svg

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/copy.mk
