##
## This is part of Japanese translation version for Docker's Documantation.
##

SUBDIRS = learning-paths

copyfiles = \
	FacebookCircle.svg      \
	home-abstract-faint.svg \
	InstagramCircle.svg     \
	LinkedinCircle.svg      \
	TwitterCircle.svg       \
	YoutubeCircle.svg       \
	ai-stars.svg            \
	build-cloud-light.svg   \
	build-cloud-white.svg   \
	docker-docs-white.svg   \
	search-ai.svg

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/copy.mk
