##
## This is part of Japanese translation version for Docker's Documantation.
##

SUBDIRS = guides learning-paths

copyfiles = \
	FacebookCircle.svg      \
	home-abstract-faint.svg \
	InstagramCircle.svg     \
	LinkedinCircle.svg      \
	TwitterCircle.svg       \
	YoutubeCircle.svg       \
	ai-stars.svg            \
	docker-docs-white.svg   \
	docker-docs-white-condensed.svg \
	search-ai.svg           \
	thumbnail.webp

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/copy.mk
