##
## This is part of Japanese translation version for Docker's Documantation.
##

SUBDIRS = guides learning-paths

copyfiles = \
	docker-docs-white-condensed.svg \
	docker-docs-white.svg           \
	home-abstract-faint.svg         \
	thumbnail.webp

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/copy.mk
