##
## This is part of Japanese translation version for Docker's Documantation.
##
bases = \
	_index.md         \
	cycle.md          \
	details.md        \
	faqs.md           \
	history.md        \
	payment-method.md \
	scout-billing.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
