##
## This is part of Japanese translation version for Docker's Documantation.
##

SUBDIRS = core-billing

bases = \
	_index.md          \
	3d-secure.md       \
	build-billing.md   \
	faqs.md            \
	scout-billing.md   \
	tax-certificate.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
