##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = compose-file environment-variables images install \
	multiple-compose-files reference

bases = \
	_index              \
	faq                 \
	features-uses       \
	file-watch          \
	gettingstarted      \
	gpu-support         \
	history             \
	migrate             \
	networking          \
	production          \
	profiles            \
	release-notes       \
	samples-for-compose \
	startup-order       \
	use-secrets

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
