##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = compose-file environment-variables images install \
	multiple-compose-files reference

bases = \
	_index.md \
	compose-application-model.md \
	compose-yaml-file.md         \
	faq.md                       \
	features-uses.md             \
	file-watch.md                \
	gettingstarted.md            \
	gpu-support.md               \
	history.md                   \
	migrate.md                   \
	networking.md                \
	production.md                \
	profiles.md                  \
	release-notes.md             \
	samples-for-compose.md       \
	startup-order.md             \
	use-secrets.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
