##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = containers daemon

bases = \
	completion.md             \
	filter.md                 \
	formatting.md             \
	labels-custom-metadata.md \
	otel.md                   \
	pruning.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
