##
## This is part of Japanese translation version for Docker's Documantation.
##
bases = \
	index.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk

copyfiles = \
	copilot-action-prompt.png \
	copilot-button.png        \
	docker-agent-copilot.png

include $(top_srcdir)/build-aux/copy.mk
