##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = dev-environments enterprise extensions extensions-sdk \
	faqs hardened-desktop images install linux mac \
	previous-versions settings troubleshoot use-desktop \
	windows wsl

bases = \
	_index                    \
	allow-list                \
	backup-and-restore        \
	containerd                \
	feedback                  \
	get-started               \
	kubernetes                \
	networking                \
	release-notes             \
	support                   \
	synchronized-file-sharing \
	uninstall                 \
	vm-vdi                    \
	wasm

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
