##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = dev-environments enterprise faqs images install linux mac \
	previous-versions settings troubleshoot use-desktop windows \
	wsl

bases = \
	_index.md                    \
	allow-list.md                \
	backup-and-restore.md        \
	containerd.md                \
	feedback.md                  \
	get-started.md               \
	gpu.md                       \
	kubernetes.md                \
	networking.md                \
	release-notes.md             \
	support.md                   \
	synchronized-file-sharing.md \
	uninstall.md                 \
	vm-vdi.md                    \
	wasm.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
