##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = api builds images repos

bases = \
	_index                 \
	admin-overview         \
	audit-log              \
	company-faqs           \
	company-owner          \
	convert-account        \
	creating-companies     \
	deactivate-account     \
	download-rate-limit    \
	general-faqs           \
	manage-a-team          \
	members                \
	mirror                 \
	new-company            \
	oci-artifacts          \
	onboard                \
	organization-faqs      \
	orgs                   \
	quickstart             \
	release-notes          \
	service-accounts       \
	vulnerability-scanning \
	webhooks

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
