##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = api builds images repos

bases = \
	_index.md                 \
	admin-overview.md         \
	audit-log.md              \
	company-faqs.md           \
	company-owner.md          \
	convert-account.md        \
	creating-companies.md     \
	deactivate-account.md     \
	download-rate-limit.md    \
	general-faqs.md           \
	manage-a-team.md          \
	members.md                \
	mirror.md                 \
	new-company.md            \
	oci-artifacts.md          \
	onboard.md                \
	organization-faqs.md      \
	orgs.md                   \
	quickstart.md             \
	release-notes.md          \
	service-accounts.md       \
	vulnerability-scanning.md \
	webhooks.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
