##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = api builds images repos

bases = \
	_index.md                 \
	download-rate-limit.md    \
	mirror.md                 \
	oci-artifacts.md          \
	quickstart.md             \
	release-notes.md          \
	service-accounts.md       \
	vulnerability-scanning.md \
	webhooks.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
