##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = api context install reference release-notes sbom security \
	swarm tutorials

bases = \
	_index.md               \
	alternative-runtimes.md \
	breaking_changes.md     \
	faq.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
