##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = api cli containers daemon install logging manage-resources \
	network release-notes security storage swarm tutorials

bases = \
	_index.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
