##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = images

bases = \
	02_our_app         \
	03_updating_app    \
	04_sharing_app     \
	05_persisting_data \
	06_bind_mounts     \
	07_multi_container \
	08_using_compose   \
	09_image_best      \
	11_what_next       \
	_index             \
	kube-deploy        \
	orchestration      \
	overview           \
	resources          \
	swarm-deploy

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
