##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = images

bases = \
	02_our_app.md         \
	03_updating_app.md    \
	04_sharing_app.md     \
	05_persisting_data.md \
	06_bind_mounts.md     \
	07_multi_container.md \
	08_using_compose.md   \
	09_image_best.md      \
	11_what_next.md       \
	_index.md             \
	kube-deploy.md        \
	orchestration.md      \
	overview.md           \
	resources.md          \
	swarm-deploy.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
