##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = admin-set-up bake bun cpp docker-build-cloud docker-compose \
	docker-scout dotnet genai-pdf-bot genai-video-bot golang      \
	images java nodejs php python r rag-ollama ruby rust

bases = \
	_index.md                   \
	container-supported-development.md \
	databases.md                \
	jupyter.md                  \
	kafka.md                    \
	kube-deploy.md              \
	language-translation.md     \
	localstack.md               \
	named-entity-recognition.md \
	orchestration.md            \
	sentiment-analysis.md       \
	swarm-deploy.md             \
	tensorflowjs.md             \
	text-classification.md      \
	text-summarization.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
