##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = admin-set-up admin-user-management angular bake bun compose-bake \
	cpp deno docker-build-cloud docker-compose docker-scout dotnet     \
	frameworks genai-leveraging-rag genai-pdf-bot genai-video-bot      \
	github-sonarqube-sandbox golang go-prometheus-monitoring images    \
	java nodejs php python r rag-ollama reactjs ros2 ruby rust         \
	testcontainers-cloud vuejs zscaler

bases = \
	_index.md                          \
	agentic-ai.md                      \
	container-supported-development.md \
	databases.md                       \
	dex.md                             \
	dhi-from-doi.md                    \
	dhi-from-wolfi.md                  \
	dhi-go-example.md                  \
	dhi-nodejs-example.md              \
	dhi-python-example.md              \
	gha.md                             \
	jupyter.md                         \
	kafka.md                           \
	kube-deploy.md                     \
	language-translation.md            \
	localstack.md                      \
	named-entity-recognition.md        \
	opentelemetry.md                   \
	orchestration.md                   \
	pgadmin.md                         \
	pre-seeding.md                     \
	sentiment-analysis.md              \
	swarm-deploy.md                    \
	tensorflowjs.md                    \
	text-classification.md             \
	text-summarization.md              \
	traefik.md                         \
	wiremock.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
