##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = admin-set-up admin-user-management angular bake bun compose-bake \
	cpp deno docker-build-cloud docker-compose docker-scout dotnet     \
	frameworks genai-leveraging-rag genai-pdf-bot genai-video-bot      \
	github-sonarqube-sandbox golang go-prometheus-monitoring images    \
	java nextjs nodejs php postgresql python r rag-ollama reactjs ros2 \
	ruby rust testcontainers-cloud testcontainers-dotnet-aspnet-core   \
	testcontainers-dotnet-getting-started testcontainers-go-getting-started  \
	testcontainers-java-aws-localstack testcontainers-java-getting-started   \
	testcontainers-java-jooq-flyway testcontainers-java-keycloak-spring-boot \
	testcontainers-java-lifecycle testcontainers-java-micronaut-kafka        \
	testcontainers-java-micronaut-wiremock testcontainers-java-mockserver    \
	testcontainers-java-quarkus testcontainers-java-replace-h2               \
	testcontainers-java-service-configuration testcontainers-java-spring-boot-kafka \
	testcontainers-java-spring-boot-rest-api testcontainers-java-wiremock    \
	testcontainers-nodejs-getting-started testcontainers-python-getting-started \
	vuejs zscaler

bases = \
	_index.md                              \
	agentic-ai.md                          \
	claude-code-model-runner.md            \
	container-supported-development.md     \
	databases.md                           \
	dex.md                                 \
	dhi-backstage.md                       \
	dhi-from-doi.md                        \
	dhi-from-wolfi.md                      \
	dhi-go-example.md                      \
	dhi-nodejs-example.md                  \
	dhi-openshift.md                       \
	dhi-python-example.md                  \
	gha.md                                 \
	jupyter.md                             \
	kafka.md                               \
	kube-deploy.md                         \
	lab-agentic-apps.md                    \
	lab-ai-fundamentals.md                 \
	lab-attestation-basics.md              \
	lab-building-images.md                 \
	lab-compose-quickstart.md              \
	lab-container-getting-started.md       \
	lab-container-supported-development.md \
	lab-containerized-sdlc.md              \
	lab-creating-ai-product-reviewer.md    \
	lab-dhi-node.md                        \
	lab-docker-agent.md                    \
	lab-docker-for-ai-redirect.md          \
	lab-mcp-gateway.md                     \
	language-translation.md                \
	localstack.md                          \
	named-entity-recognition.md            \
	opencode-model-runner.md               \
	opentelemetry.md                       \
	orchestration.md                       \
	pgadmin.md                             \
	pre-seeding.md                         \
	sentiment-analysis.md                  \
	swarm-deploy.md                        \
	tensorflowjs.md                        \
	text-classification.md                 \
	text-summarization.md                  \
	traefik.md                             \
	wiremock.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
