##
## This is part of Japanese translation version for Docker's Documantation.
##

SUBDIRS = compose

bases = \
	aci-ecs-eol.md                    \
	admin-company-overview.md         \
	admin-early-access.md             \
	admin-org-overview.md             \
	beta.md                           \
	buildx-v0.10-disclaimer.md        \
	compose-bridge-early-access.md    \
	compose-eol.md                    \
	deploy.md                         \
	desktop-builders-setting.md       \
	desktop-experimental.md           \
	desktop-license-update.md         \
	desktop-linux-launch.md           \
	desktop-network-setting.md        \
	desktop-notifications-settings.md \
	dev-envs-changing.md              \
	dockerfile-labs-channel.md        \
	experimental.md                   \
	extensions-form.md                \
	gha-tutorial.md                   \
	guides-get-docker.md              \
	install-script.md                 \
	open-terminal.md                  \
	root-errors.md                    \
	swarm-compose-compat.md           \
	swarm-mode.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk

copyfiles = \
	index.md

include $(top_srcdir)/build-aux/copy.mk
