##
## This is part of Japanese translation version for Docker's Documantation.
##

SUBDIRS = compose

bases = \
	_index.md                         \
	aci-ecs-eol.md                    \
	admin-company-overview.md         \
	admin-early-access.md             \
	admin-org-overview.md             \
	buildx-v0.10-disclaimer.md        \
	compose-bridge-experimental.md    \
	compose-eol.md                    \
	deploy.md                         \
	desktop-license-update.md         \
	desktop-linux-launch.md           \
	dev-envs-changing.md              \
	dockerfile-labs-channel.md        \
	experimental.md                   \
	extensions-form.md                \
	guides-get-docker.md              \
	install-script.md                 \
	new-plans.md                      \
	open-terminal.md                  \
	root-errors.md                    \
	swarm-compose-compat.md           \
	swarm-mode.md                     \
	tax-compliance.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
