##
## This is part of Japanese translation version for Docker's Documantation.
##

SUBDIRS = compose

bases = \
	_index.md                  \
	aci-ecs-eol.md             \
	buildx-v0.10-disclaimer.md \
	compose-eol.md             \
	daemon-cfg-desktop.md      \
	deploy.md                  \
	desktop-license-update.md  \
	desktop-linux-launch.md    \
	dev-envs-changing.md       \
	dockerfile-labs-channel.md \
	engine-license.md          \
	experimental.md            \
	extensions-form.md         \
	guides-get-docker.md       \
	hub-categories.md          \
	install-script.md          \
	open-terminal.md           \
	root-errors.md             \
	swarm-compose-compat.md    \
	swarm-mode.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk

copyfiles = \
	labspace-quickstart.md

include $(top_srcdir)/build-aux/copy.mk
