##
## This is part of Japanese translation version for Docker's Documantation.
##

SUBDIRS =  accounts admin billing build build-cloud compose copilot  \
	desktop docker-hub engine extensions harmonia scout security \
	subscription

bases = \
	_index.md                 \
	platform-release-notes.md \
	release-lifecycle.md      \
	retired.md                \
	tcc.md                    \
	testcontainers.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
