##
## This is part of Japanese translation version for Docker's Documantation.
##

SUBDIRS = accounts admin ai billing build build-cloud compose copilot \
	desktop dhi docker-hub engine enterprise extensions offload   \
	scout security subscription unassociated-machines

bases = \
	_index.md                 \
	platform-release-notes.md \
	release-lifecycle.md      \
	retired.md                \
	tcc.md                    \
	testcontainers.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
