##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = drivers

bases = \
	_index \
	links                       \
	network-tutorial-host       \
	network-tutorial-macvlan    \
	network-tutorial-overlay    \
	network-tutorial-standalone \
	packet-filtering-firewalls  \
	proxy

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
