##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = drivers

bases = \
	_index.md \
	links.md                       \
	network-tutorial-host.md       \
	network-tutorial-macvlan.md    \
	network-tutorial-overlay.md    \
	network-tutorial-standalone.md \
	packet-filtering-firewalls.md  \
	proxy.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
