##
## This is part of Japanese translation version for Docker's Documantation.
##
bases = \
	_index        \
	ai-ml         \
	angular       \
	cloudflared   \
	django        \
	dotnet        \
	elasticsearch \
	express       \
	fastapi       \
	flask         \
	gitea         \
	go            \
	java          \
	javascript    \
	mariadb       \
	minecraft     \
	mongodb       \
	ms-sql        \
	mysql         \
	nextcloud     \
	nginx         \
	nodejs        \
	php           \
	pi-hole       \
	plex          \
	portainer     \
	postgres      \
	prometheus    \
	python        \
	rails         \
	react         \
	redis         \
	ruby          \
	rust          \
	spark         \
	spring        \
	traefik       \
	typescript    \
	vuejs         \
	wireguard     \
	wordpress

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
