##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = guides images integrations policy

bases = \
	_index.md              \
	advisory-db-sources.md \
	dashboard.md           \
	data-handling.md       \
	env-vars.md            \
	image-analysis.md      \
	image-details-view.md  \
	image-prefix.md        \
	quickstart.md          \
	release-notes.md       \
	sbom.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
