##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = guides images integrations policy release-notes

bases = \
	_index.md              \
	advisory-db-sources.md \
	dashboard.md           \
	data-handling.md       \
	env-vars.md            \
	image-analysis.md      \
	image-details-view.md  \
	image-prefix.md        \
	install.md             \
	metrics-exporter.md    \
	quickstart.md          \
	sbom.md                \
	scores.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
