##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = concepts deep-dive explore how-tos images \
	integrations policy release-notes

bases = \
	_index.md     \
	install.md    \
	quickstart.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
