##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = images storagedriver

bases = \
	_index                        \
	bind-mounts                   \
	containerd                    \
	tmpfs                         \
	troubleshooting_volume_errors \
	volumes

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
