##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = images storagedriver

bases = \
	_index.md                        \
	bind-mounts.md                   \
	containerd.md                    \
	tmpfs.md                         \
	troubleshooting_volume_errors.md \
	volumes.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
