##
## This is part of Japanese translation version for Docker's Documantation.
##
bases = \
	_index          \
	add-seats       \
	desktop-license \
	details         \
	downgrade       \
	faq             \
	remove-seats    \
	scout-details   \
	upgrade

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
