##
## This is part of Japanese translation version for Docker's Documantation.
##
bases = \
	_index.md          \
	add-seats.md       \
	build-details.md   \
	desktop-license.md \
	details.md         \
	downgrade.md       \
	faq.md             \
	remove-seats.md    \
	scout-details.md   \
	upgrade.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
