##
## This is part of Japanese translation version for Docker's Documantation.
##

SUBDIRS = core-subscription images

bases = \
	_index.md          \
	build-details.md   \
	desktop-license.md \
	faq.md             \
	scout-details.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
