##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = admin ai app-dev best-practices cloud-services data-science \
	databases deploy devops distributed-systems faq frameworks    \
	networking observability product-demo release-notes secrets   \
	troubleshooting

bases = \
	_index.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
