##
## This is part of Japanese translation version for Docker's Documantation.
##
SUBDIRS = images

bases = \
	_index.md             \
	dsos-program.md       \
	dvp-program.md        \
	insights-analytics.md \
	official-images.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
