##
## This is part of Japanese translation version for Docker's Documantation.
##

bases = \
	docker_buildx.yaml                            \
	docker_buildx_bake.yaml                       \
	docker_buildx_build.yaml                      \
	docker_buildx_create.yaml                     \
	docker_buildx_debug.yaml                      \
	docker_buildx_debug_build.yaml                \
	docker_buildx_dial-stdio.yaml                 \
	docker_buildx_du.yaml                         \
	docker_buildx_history.yaml                    \
	docker_buildx_history_import.yaml             \
	docker_buildx_history_inspect.yaml            \
	docker_buildx_history_inspect_attachment.yaml \
	docker_buildx_history_logs.yaml               \
	docker_buildx_history_ls.yaml                 \
	docker_buildx_history_open.yaml               \
	docker_buildx_history_trace.yaml              \
	docker_buildx_history_rm.yaml                 \
	docker_buildx_imagetools.yaml                 \
	docker_buildx_imagetools_create.yaml          \
	docker_buildx_imagetools_inspect.yaml         \
	docker_buildx_inspect.yaml                    \
	docker_buildx_install.yaml                    \
	docker_buildx_ls.yaml                         \
	docker_buildx_prune.yaml                      \
	docker_buildx_rm.yaml                         \
	docker_buildx_stop.yaml                       \
	docker_buildx_uninstall.yaml                  \
	docker_buildx_use.yaml                        \
	docker_buildx_version.yaml

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
