##
## This is part of Japanese translation version for Docker's Documantation.
##

bases = \
	docker_desktop.yaml            \
	docker_desktop_engine.yaml     \
	docker_desktop_engine_ls.yaml  \
	docker_desktop_engine_use.yaml \
	docker_desktop_logs.yaml       \
	docker_desktop_restart.yaml    \
	docker_desktop_start.yaml      \
	docker_desktop_status.yaml     \
	docker_desktop_stop.yaml       \
	docker_desktop_update.yaml

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/main.mk
